--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">HelloWorld</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Voy a aparcar!</string>
     <string name="action_settings">Settings</string>
 </resources>
