--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">HelloWorld</string>
 
-    <string name="hello_world">Sincro desde joakPC</string>
+    <string name="hello_world">Sincro desde Miguel again</string>
     <string name="action_settings">Settings</string>
 </resources>
