--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">HelloWorld</string>
 
-    <string name="hello_world">Sincro desde Maquinote again alias Rulorz10</string>
+    <string name="hello_world">Hola Mundo</string>
+    <string name='principal'>Bienvenido a la primera app</string>
+    <string name='botonEnviar'>Enviar</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_segunda">Segunda</string>
 </resources>
